[package]
name = "tools_for_clash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.117"
serde_yml = "0.0.4"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
